<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">t5a3_vernich_adrian2</string>
    <string name="global">GLOBAL POSITION</string>
    <string name="text">Welcome</string>
    <string name="movement">MOVEMENTS</string>
    <string name="transference">TRANSFERENCES</string>
    <string name="password">CHANGE PASSWORD</string>
    <string name="promotion">PROMOTIONS</string>
    <string name="cashiers">CASHIERS</string>
    <string name="exit">EXIT</string>
    <string name="banco">Bank</string>
    <string name="choose_acount">Choose your account:</string>
    <string name="old_passwd">Enter your old password:</string>
    <string name="new_passwd">Enter your new password:</string>
    <string name="dcsImg">Desc imagen</string>
    <string name="open_nav">Open Navegation Drawer</string>
    <string name="close_nav">Close Navegation Drawer</string>
    <string-array name="accounts">
        <item>ES60-2100-0418-40-1234567891</item>
        <item>ES90-2080-5801-10-1234567891</item>
        <item>ES50-6420-1692-30-1234567891</item>
        <item>ES90-1479-1793-60-1234567891</item>
    </string-array>
    <string-array name="money">
        <item>€</item>
        <item>$</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>