<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TransferActivity">

    <LinearLayout
        android:id="@+id/lyMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/txtBanco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banco"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtTransferencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="@string/transference"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lyMenu" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cdTransferencia"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/lyTransferencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_acount" />

            <Spinner
                android:id="@+id/spnCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="32dp">

                <RadioButton
                    android:id="@+id/btnCuentaP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cuenta propia" />

                <RadioButton
                    android:id="@+id/btnCuentaA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cuenta ajena" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spnCuentaP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" />
            <EditText
                android:id="@+id/editTextCuentaDestino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Introduce cuenta destino"
                android:inputType="number"
                android:layout_marginTop="8dp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtCantidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cantidad:" />

                <EditText
                    android:id="@+id/txtDinero"
                    android:layout_width="182dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/txtCantidad" />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="57dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkboxJustificante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="70dp"
                android:text="Enviar justificante" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="24dp">

                <Button
                    android:id="@+id/btnEnviar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="ENVIAR"
                    android:backgroundTint="@color/green"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="CANCELAR"
                    android:backgroundTint="@color/green"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>